# Partizee

./: .gitignore  Cargo.toml  README.md  develop.sh  install.sh
partizee_cli/: Cargo.toml
partizee_cli/src/: main.rs  partizee.rs
partizee_cli/src/commands/: compile.rs  deploy.rs  mod.rs  new.rs  user_profile.rs
partizee_cli/src/utils/: clap_cli.rs  fs_nav.rs  menus.rs  mod.rs  pbc_commands.rs  utils.rs
partizee_cli/src/utils/cryptography/: bip32.rs  bip39.rs  bip44.rs
partizee_cli/templates/: .env.example  Cargo.template.toml  LICENSE.template  README.md
partizee_cli/templates/frontend/: README.md  package.json
partizee_cli/templates/frontend/scripts/: codegen-abi.ts
partizee_cli/templates/frontend/src/app/: layout.tsx  page.tsx
partizee_cli/templates/frontend/src/context/: partisia.tsx
partizee_cli/templates/frontend/src/hooks/: index.ts  useAccount.ts  useConnect.ts  useRequestPrivateKey.ts  useSendTransaction.ts  useSignMessage.ts  useTransactionClient.ts  useWaitForTransaction.ts  useWriteContract.ts
partizee_cli/templates/frontend/src/types/: partisia.ts
partizee_cli/templates/frontend/src/utils/: abi.ts  configs.ts
partizee_cli/templates/frontend/src/utils/account/: index.ts  toSenderAuthentication.ts
partizee_cli/templates/frontend/src/utils/actions/: index.ts  signMessage.ts
partizee_cli/templates/rust/contracts/counter/: Cargo.template.toml  README.md
partizee_cli/templates/rust/contracts/counter/src/: lib.rs  upgrade_to.rs
partizee_cli/templates/rust/contracts/counterV1/: Cargo.template.toml
partizee_cli/templates/rust/contracts/counterV2/: Cargo.toml  README.md
partizee_cli/templates/rust/contracts/counterV2/src/: lib.rs  upgrade_from.rs
partizee_cli/templates/rust/contracts/counterV3/: Cargo.toml  README.md
partizee_cli/templates/rust/contracts/counterV3/src/: lib.rs  upgrade_from.rs
templates/: .gitignore.template  Cargo.template.toml  README.md
templates/frontend/: package.json
templates/frontend/src/app/: layout.tsx  page.tsx  providers.tsx
templates/frontend/src/context/: partisia.tsx
templates/frontend/src/hooks/: index.ts  useAccount.ts  useConnect.ts  useMetaMaskSnap.ts  useRequestPrivateKey.ts  useSendTransaction.ts  useSignMessage.ts  useTransactionClient.ts  useWaitForTransaction.ts
templates/frontend/src/types/: metamask-snap.ts  partisia.ts
templates/frontend/src/utils/: client.ts  configs.ts
templates/frontend/src/utils/actions/: metamask-snap.ts
templates/rust/contracts/counter/: Cargo.template.toml
tester/: Cargo.toml  README.md
tester/frontend/: package.json
tester/frontend/src/app/: providers.tsx
