[workspace]
name = "partizee"
members = ["packages/rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MrDeadCe11 <mister.deadce11@gmail.com>"]
description = "A CLI tool to bootstrap partisia dapps"
license = "MIT"

[workspace.dependencies]
cargo-partisia-contract = "5.204.0"
clap = "4.5.38"
cliclack = "0.3.6"
tera = "1.20.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# tokio = "1.35.0"
tokio-test = "0.4.4"
pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
serde_json = "1.0.140"
getrandom = "0.3.3"
dirs = "6.0.0"
walkdir = "2.5.0"


